# gsd-community-hub

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
programs/gsd-hub/: Cargo.toml
programs/gsd-hub/src/: errors.rs  lib.rs
programs/gsd-hub/src/cpi/: compression.rs  mod.rs  noop.rs
programs/gsd-hub/src/instructions/: cast_vote.rs  claim_revenue_share.rs  create_round.rs  delegate_vote.rs  deposit_tokens.rs  execute_burn.rs  finalize_peer_verification.rs  init_contribution_tree.rs  init_governance_config.rs  init_revenue_config.rs  init_verification_config.rs  mod.rs  record_contribution.rs  record_revenue_event.rs  register.rs  relinquish_vote.rs  revoke_delegation.rs  submit_idea.rs  submit_peer_review.rs  submit_verification.rs  transition_round.rs  update_governance_config.rs  update_hash.rs  update_score.rs  veto_idea.rs  withdraw_tokens.rs
programs/gsd-hub/src/state/: contribution.rs  delegation_record.rs  developer.rs  governance_config.rs  idea.rs  idea_round.rs  merkle_tree.rs  mod.rs  peer_review.rs  revenue_claim.rs  revenue_config.rs  revenue_event.rs  revenue_vault.rs  reviewer_profile.rs  verification_config.rs  verification_report.rs  vote_deposit.rs  vote_record.rs
programs/gsd-hub/tests/: contribution.test.ts  delegation.test.ts  governance-rounds.test.ts  governance-voting.test.ts  quadratic-voting.test.ts  register.test.ts  revenue.test.ts  verification.test.ts
scripts/: log-upgrade.ts  (+2 more)
(+227 files in other folders)
