[package]
name = "gsd-hub"
version = "0.1.0"
edition = "2021"
description = "GSD Community Hub on-chain program"

[lib]
crate-type = ["cdylib", "lib"]
name = "gsd_hub"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }
sha2 = "0.10"
